# claude-plugins-sandbox

./: .gitignore  README.md
docs/: SETUP.md
examples/: README.md
examples/talon-observability/: README.md  test-plugin.sh
examples/talon-observability/.claude-plugin/: marketplace.json
examples/talon-observability/hooks/: forward-to-talon.sh  hooks.json
plugins/: README-COMPLETE-SETUP.md  README.md
plugins/talon/: Cargo.toml  README.md
plugins/talon/tests/common/: mod.rs
